Changed the way objects are displayed around the scene, they'll use position top and left instead of css transform translate. It will result in a performance drop,but I hope it will solve the screen overflow problem on mobile phones

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,5 @@
 html,
 body {
-  max-width: 100vw;
-  max-height: 100vh;
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -10,8 +8,8 @@ body {
 }
 
 #__next {
-  max-width: 100vw;
-  max-height: 100vh;
+  width: 100vw;
+  height: 100vh;
   display: grid;
   justify-items: center;
   align-items: center;
